<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_towns"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_towns" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_photo_album"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo_album" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_google_maps"
            android:icon="@android:drawable/ic_dialog_map"
            android:onClick="onClick1"
            android:title="Google Maps" />
    </group>
</menu>