<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vt251club.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_towns"
        android:name="com.example.vt251club.ui.towns.TownsFragment"
        android:label="@string/menu_towns"
        tools:layout="@layout/fragment_towns" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.vt251club.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.vt251club.ui.login.LoginFragment"
        android:label="Login or Sign Up"
        tools:layout="@layout/fragment_login" />
    <activity
        android:id="@+id/nav_google_maps"
        android:name="com.example.vt251club.MapsActivity"
        android:label="maps_activity"
        tools:layout="@layout/activity_maps" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.vt251club.nav_contact"
        android:label="Contact Us"
        tools:layout="@layout/fragment_nav_contact" />
</navigation>